[package]
name = "amethyst_core"
version = "0.16.0"
authors = [
    "Simon Rönnberg <seamonr@gmail.com>",
    "Joël Lupien <jojolepro@jojolepro.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
edition = "2018"
description = "Amethyst core"

documentation = "https://docs.amethyst.rs/stable/amethyst_core/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

license = "MIT OR Apache-2.0"

[dependencies]
amethyst_error = { path = "../amethyst_error", version = "0.16.0" }
game_clock = "1.1.1"
fern = { version = "0.6", features = ["colored"] }
type-uuid = "0.1"
log = "0.4"
num-traits = "0.2.14"
serde = { version = "1", features = ["derive"] }
approx = "0.5"
derive-new = "0.5"
getset = "0.1.1"
legion = { git = "https://github.com/amethyst/legion", rev = "0b058dd8bd3190d5d5d1d29f62571bb8b70c3b93", default-features = false, features = [
    "serialize",
    "crossbeam-events",
    "reexport",
] }
legion-prefab = { version = "0.1", git = "https://github.com/amethyst/prefab", rev = "49ba008a3b398033725726c641b96cd48b5a1080" }
nalgebra = { version = "0.25", default-features = false, features = ["serde-serialize"] }
rayon = "1.5"
shrev = "1.1.1"
# Update simba only if nalgebra need a new version
simba = { version = "0.4" }
smallvec = "1.6"
spin_sleep = "1.0.0"
thread_profiler = { version = "0.3", optional = true }
serde-diff = "0.4"

[dev-dependencies]
amethyst = { path = "../", version = "0.16.0", features = ["renderer"] }
ron = "0.6.4"

[features]
profiler = ["thread_profiler/thread_profiler"]
parallel = ["legion/parallel"]
