[package]
name = "amethyst_derive"
version = "0.15.3"
authors = ["Simon Rönnberg <seamonr@gmail.com>", "Amethyst Foundation <contact@amethyst.rs>"]
edition = "2018"
description = "Amethyst derive"

documentation = "https://docs.amethyst.rs/stable/amethyst_derive/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "amethyst/amethyst" }

[dependencies]
heck = "0.3.1"
syn = { version = "1.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
proc_macro_roids = "0.7"
proc-macro-crate = "0.1"

[dev-dependencies]
amethyst_core = { path = "../amethyst_core", version = "0.15.3" }
amethyst_assets = { path = "../amethyst_assets", version = "0.15.3" }
amethyst_error = { path = "../amethyst_error", version = "0.15.3" }
amethyst_test = { path = "../amethyst_test", version = "0.15.3" }

[lib]
name = "amethyst_derive"
proc-macro = true
