[package]
name = "amethyst_error"
version = "0.15.3"
authors = ["John-John Tedro <udoprog@tedro.se>", "Amethyst Foundation <contact@amethyst.rs>"]
readme = "README.md"
edition = "2018"
description = """
Internal error handling for Amethyst.
"""
keywords = ["game", "error", "amethyst"]
categories = ["rust-patterns"]
license = "MIT/Apache-2.0"

documentation = "https://docs.amethyst.rs/stable/amethyst_error/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

[badges]
travis-ci = { repository = "amethyst/amethyst" }

[dependencies]
backtrace = "0.3.44"
