[package]
name = "amethyst_gltf"
version = "0.15.3"
authors = [
    "Rhuagh <seamonr@gmail.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
edition = "2018"
description = "GLTF asset loading"

documentation = "https://docs.amethyst.rs/stable/amethyst_gltf/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

license = "MIT/Apache-2.0"

[dependencies]
amethyst_assets = { path = "../amethyst_assets", version = "0.15.3" }
amethyst_animation = { path = "../amethyst_animation", version = "0.15.3" }
amethyst_core = { path = "../amethyst_core", version = "0.15.3" }
amethyst_error = { path = "../amethyst_error", version = "0.15.3" }
amethyst_rendy = { path = "../amethyst_rendy", version = "0.15.3" }
err-derive = "0.2.3"
base64 = "0.11"
fnv = "1"
gltf = { git = "https://github.com/gltf-rs/gltf.git", rev = "4298aac70336ae0413312a61344badbf67fbcbde", features = ["KHR_lights_punctual"] }
legion-prefab = { version = "0.1", git = "https://github.com/amethyst/prefab", rev = "7c30249f106e6177549e223ca2823eec8ab6c70b" }
hibitset = { version = "0.6.2", features = ["parallel"] }
log = "0.4"
mikktspace = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
type-uuid = "0.1"
uuid = { version = "0.8", features = ["v4"] }

thread_profiler = { version = "0.3", optional = true }
image = "0.23.12"
derivative = "2.1.1"

[dev-dependencies]
amethyst = { path = "../", version = "0.15.3", features = ["renderer"] }
futures = "0.3"

[features]
profiler = ["thread_profiler/thread_profiler"]
