[package]
name = "amethyst_input"
version = "0.8.0"
authors = ["Rhuagh <seamonr@gmail.com>", "Xaeroxe <kieseljake@gmail.com>"]
edition = "2018"
description = "Input rebinding "

documentation = "https://docs-src.amethyst.rs/stable/amethyst_input/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "amethyst/amethyst" }

[dependencies]
amethyst_core = { path = "../amethyst_core/", version = "0.7.0" }
amethyst_error = { path = "../amethyst_error/", version = "0.2.0" }
amethyst_config = { path = "../amethyst_config/", version = "0.11.0" }
amethyst_window = { path = "../amethyst_window/", version = "0.2.0" }
derivative = "1.0"
derive-new = "0.5"
fnv = "1"
serde = { version = "1", features = ["derive"] }
winit = { version = "0.19", features = ["serde"] }
sdl2 = { version = "0.31.0", optional = true }

thread_profiler = { version = "0.3", optional = true }

[dependencies.smallvec]
version = "0.6"
features = ["serde"]

[dev-dependencies]
approx = "0.3"

[features]
profiler = [ "thread_profiler/thread_profiler" ]
nightly = [ "amethyst_core/nightly" ]
sdl_controller = ["sdl2"]
