[package]
name = "amethyst_input"
version = "0.15.3"
authors = [
    "Rhuagh <seamonr@gmail.com>",
    "Xaeroxe <kieseljake@gmail.com>",
    "Amethyst Foundation <contact@amethyst.rs>",
]
edition = "2018"
description = "Input rebinding "

documentation = "https://docs.amethyst.rs/stable/amethyst_input/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

license = "MIT/Apache-2.0"

[dependencies]
amethyst_core = { path = "../amethyst_core", version = "0.15.3" }
amethyst_error = { path = "../amethyst_error", version = "0.15.3" }
amethyst_config = { path = "../amethyst_config/", version = "0.15.3" }
derivative = "2.1.1"
derive-new = "0.5"
fnv = "1"
serde = { version = "1", features = ["derive"] }
winit = { version = "0.24", git = "https://github.com/rust-windowing/winit", rev = "38fccebe1fbc4226c75d6180e5317bd93c024951", features = ["serde"] }
sdl2 = { version = "0.34", optional = true }
smallvec = { version = "1.2", features = ["serde"] }

thread_profiler = { version = "0.3", optional = true }

[dev-dependencies]
amethyst = { path = "../", version = "0.15.3", features = ["renderer"] }
approx = "0.4"

[features]
profiler = ["thread_profiler/thread_profiler"]
# sdl_controller = ["sdl2"]
