[package]
name = "amethyst_locale"
version = "0.6.0"
authors = ["Joël Lupien <jojolepromain@gmail.com>"]
readme = "README.md"
edition = "2018"
description = """
Localisation bindings.
"""
exclude = ["examples/*"]
license = "MIT/Apache-2.0"
keywords = ["game", "localisation", "resource", "management", "amethyst"]
categories = ["filesystem,localisation"]

documentation = "https://docs-src.amethyst.rs/stable/amethyst_locale/"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

[badges]
appveyor = { repository = "amethyst/amethyst", branch = "master" }
travis-ci = { repository = "amethyst/amethyst" }

[dependencies]
amethyst_assets = { path = "../amethyst_assets", version = "0.8.0" }
amethyst_core = { path = "../amethyst_core", version = "0.7.0" }
amethyst_error = { path = "../amethyst_error", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
fluent = "0.6.0"
# `fluent`'s Cargo.toml is happy to take `intl_pluralrules` 1.1.0, but the code is not compatible,
# so we need to lock this down.
intl_pluralrules = "=1.0.3"

thread_profiler = { version = "0.3", optional = true }

[features]
profiler = [ "thread_profiler/thread_profiler" ]
float64 = ["amethyst_core/float64"]
