[package]
name = "amethyst_network"
version = "0.8.0"
authors = [
	"Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>",
	"Lucio Franco (LucioFranco) <luciofranco14@gmail.com>",
	"Timon Post (TimonPost) <https://github.com/TimonPost>",
	"Justin LeFebvre (jstnlef) <https://github.com/jstnlef>",
        "Amethyst Foundation <contact@amethyst.rs>"
]
edition = "2018"
description = "Amethyst networking crate"
keywords = ["networking", "specs", "ecs", "amethyst", "serialization"]
categories = ["game-engines"]

readme = "README.md"
documentation = "https://docs.amethyst.rs/stable/amethyst_network/index.html"
homepage = "https://amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"
license = "MIT/Apache-2.0"

[features]
default = ["web_socket"]
profiler = [ "thread_profiler/thread_profiler" ]
web_socket = ["tungstenite", "crossbeam-channel", "js-sys", "web-sys", "wasm-bindgen"]

[dependencies]
amethyst_core = { path = "../amethyst_core", version = "0.10.0", default-features = false }
amethyst_error = { path = "../amethyst_error", version = "0.5.0" }
bytes = "0.5"
laminar = "0.3"
log = "0.4"
thread_profiler = { version = "0.3" , optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
tungstenite = { version = "0.10.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
crossbeam-channel = { version = "0.4.0", optional = true }
js-sys = { version = "0.3.37", optional = true }
wasm-bindgen = { version = "0.2.60", optional = true }
web-sys = { version = "0.3.37", optional = true, features = ["Blob", "CloseEvent", "ErrorEvent", "Event", "MessageEvent", "WebSocket"] }
