[package]
name = "amethyst_physics"
version = "0.1.0"
authors = ["PLR <plredmond+amgh@gmail.com>"]
edition = "2018"
description = "Amethyst physics crate"
keywords = ["physics", "ecs", "picking", "amethyst"]
categories = ["game-engines"]

documentation = "https://www.amethyst.rs/doc/master/doc/amethyst_physics/index.html"
homepage = "https://www.amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"
license = "MIT/Apache-2.0"

[dependencies]
amethyst_core = { path = "../amethyst_core", version = "0.3.0" }
amethyst_input = { path = "../amethyst_input", version = "0.4.0" }
amethyst_renderer = { path = "../amethyst_renderer", version = "0.8.0" }
amethyst_ui = { path = "../amethyst_ui", version = "0.3.0" }
collision = "0.18.0"
log = "0.4"
