[package]
name = "amethyst_renderer"
version = "0.8.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "High-level rendering engine with multiple backends"
exclude = ["examples/*"]
keywords = ["game", "engine", "renderer", "3d", "amethyst"]
categories = ["rendering", "rendering::engine"]

documentation = "https://www.amethyst.rs/doc/master/doc/amethyst_renderer/"
homepage = "https://www.amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

readme = "README.md"
license = "MIT OR Apache-2.0"

[badges]
appveyor = { repository = "amethyst/amethyst", branch = "develop" }
travis-ci = { repository = "amethyst/amethyst" }

[features]
default = ["opengl"]
#d3d11 = ["gfx_device_dx11", "gfx_window_dxgi"]
#metal = ["gfx_device_metal", "gfx_window_metal"]
opengl = ["gfx_device_gl", "gfx_window_glutin", "glutin"]
#vulkan = ["gfx_device_vulkan", "gfx_window_vulkan"]
profiler = [ "thread_profiler/thread_profiler" ]
nightly = [ "amethyst_core/nightly" ]

[dependencies]
amethyst_assets = { path = "../amethyst_assets", version = "0.4.0" }
amethyst_core = { path = "../amethyst_core", version = "0.3.0" }
derivative = "1.0"
error-chain = "0.12"
fnv = "1.0"
genmesh = "0.6"
gfx = { version = "0.17.1", features = ["serialize"] }
gfx_core = { version = "0.8", features = ["serialize"] }
gfx_macros = "0.2"
glsl-layout = { version = "0.1.1", features = ["cgmath", "gfx"] }
hibitset = { version = "0.5.1", features = ["parallel"] }
image = "0.19"
log = "0.4"
rayon = "1.0.2"
serde = { version = "1", features = ["serde_derive"] }
shred-derive = "0.5"
shred = "0.7"
wavefront_obj = "5.1"
winit = "0.17"

thread_profiler = { version = "0.3", optional = true }

gfx_device_gl = { version = "0.15", optional = true }
gfx_window_glutin = { version = "0.26.0", optional = true }
glutin = { version = "0.18", optional = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
gfx_device_vulkan = { version = "0.1", optional = true }
gfx_window_vulkan = { version = "0.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
gfx_device_metal = { version = "0.3", optional = true }
gfx_window_metal = { version = "0.6", optional = true }

[target.'cfg(windows)'.dependencies]
gfx_device_dx11 = { version = "0.7", optional = true }
gfx_window_dxgi = { version = "0.16", optional = true }

[dependencies.hetseq]
version = "0.2.0"

[dependencies.smallvec]
version = "0.6"
features = ["serde"]
