[package]
name = "amethyst_rendy"
version = "0.15.3"
authors = ["Amethyst Foundation <contact@amethyst.rs>"]
edition = "2018"
description = "High-level rendering engine with multiple backends"
keywords = ["game", "engine", "renderer", "3d", "amethyst"]
categories = ["rendering", "rendering::engine"]
license = "MIT/Apache-2.0"

[package.metadata.docs.rs]
features = ["shader-compiler", "test-support", "winit", "vulkan"]

[dependencies]
rendy = { git = "https://github.com/radium-io/rendy", branch = "upgrade-gfx", default-features = false, features = [
    "base",
    "mesh-obj",
    "texture-image",
    "texture-palette",
    "serde-1",
] }
amethyst_assets = { path = "../amethyst_assets", version = "0.15.3" }
amethyst_core = { path = "../amethyst_core", version = "0.15.3" }
amethyst_error = { path = "../amethyst_error", version = "0.15.3" }
amethyst_window = { path = "../amethyst_window", version = "0.15.3", optional = true }
amethyst_config = { path = "../amethyst_config", version = "0.15.3" }
derive-new = "0.5.6"
genmesh = "0.6"
glsl-layout = "0.3"
gltf = { version = "0.15", features = ["KHR_lights_punctual"] }
lazy_static = "1.4"
log = "0.4"
palette = { version = "0.4", features = ["serde"] }
ron = "0.5"
serde = { version = "1", features = ["serde_derive"] }
fnv = "1"
derivative = "2.1.1"
smallvec = "1.2.0"
static_assertions = "1.1"
indexmap = { version = "1.3", features = ["rayon"] }
winit = { git = "https://git@github.com/rust-windowing/winit", branch = "master", features = ["serde"] }
thread_profiler = { version = "0.3", optional = true }
approx = "0.4.0"

[dev-dependencies]
rayon = "1.4.0"
more-asserts = "0.2.1"
criterion = "0.3.0"

[features]
metal = ["rendy/metal"]
vulkan = ["rendy/vulkan"]
empty = ["rendy/empty"]
profiler = ["thread_profiler/thread_profiler", "rendy/profiler"]
no-slow-safety-checks = ["rendy/no-slow-safety-checks"]
shader-compiler = ["rendy/shader-compiler"]
test-support = []
experimental-spirv-reflection = ["rendy/spirv-reflection"]
window = ["amethyst_window"]

[[bench]]
name = "camera"
harness = false
