[package]
name = "amethyst_rendy"
version = "0.15.3"
authors = ["Amethyst Foundation <contact@amethyst.rs>"]
edition = "2018"
description = "High-level rendering engine with multiple backends"
keywords = ["game", "engine", "renderer", "3d", "amethyst"]
categories = ["rendering", "rendering::engine"]
license = "MIT/Apache-2.0"

[package.metadata.docs.rs]
features = ["shader-compiler", "test-support", "winit", "vulkan"]

[dependencies]
amethyst_assets = { path = "../amethyst_assets", version = "0.15.3" }
amethyst_core = { path = "../amethyst_core", version = "0.15.3" }
amethyst_error = { path = "../amethyst_error", version = "0.15.3" }
amethyst_window = { path = "../amethyst_window", version = "0.15.3", optional = true }
amethyst_config = { path = "../amethyst_config", version = "0.15.3" }
derive-new = "0.5"
genmesh = "0.6"
glsl-layout = "0.4"
gltf = { git = "https://github.com/gltf-rs/gltf.git", rev = "4298aac70336ae0413312a61344badbf67fbcbde", features = ["KHR_lights_punctual"] }
lazy_static = "1.4"
log = "0.4"
palette = { version = "0.4", default-features = false, features = ["serde"] }
ron = "0.6.4"
serde = { version = "1", features = ["derive"] }
fnv = "1"
derivative = "2.1.1"
smallvec = "1.2.0"
static_assertions = "1.1"
indexmap = { version = "1.3", features = ["rayon"] }
type-uuid = "0.1"
thread_profiler = { version = "0.3", optional = true }
approx = "0.4"
legion-prefab = { version = "0.1", git = "https://github.com/amethyst/prefab", rev = "7c30249f106e6177549e223ca2823eec8ab6c70b" }

[target.'cfg(target_os = "macos")'.dependencies]
rendy = { version = "0.5", git = "https://github.com/amethyst/rendy", rev = "50667887612adc9314accea77438aa7fb925bce0", default-features = false, features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
rendy = { version = "0.5", git = "https://github.com/amethyst/rendy", rev = "50667887612adc9314accea77438aa7fb925bce0", default-features = false, features = ["vulkan"] }

[target.'cfg(target_os = "linux")'.dependencies]
rendy = { version = "0.5", git = "https://github.com/amethyst/rendy", rev = "50667887612adc9314accea77438aa7fb925bce0", default-features = false, features = ["vulkan"] }

[dev-dependencies]
amethyst = { path = "../", version = "0.15.3", features = ["renderer"] }
winit = { version = "0.24", git = "https://github.com/rust-windowing/winit", rev = "38fccebe1fbc4226c75d6180e5317bd93c024951", features = ["serde"] }
rayon = "1.5"
more-asserts = "0.2.1"
criterion = "0.3.0"

[features]
default = [
    "rendy/base",
    "rendy/mesh-obj",
    "rendy/texture-image",
    "rendy/texture-palette",
    "rendy/serde-1",
]
metal = ["rendy/metal"]
vulkan = ["rendy/vulkan"]
empty = ["rendy/empty"]
profiler = ["thread_profiler/thread_profiler", "rendy/profiler"]
no-slow-safety-checks = ["rendy/no-slow-safety-checks"]
shader-compiler = ["rendy/shader-compiler"]
test-support = []
experimental-spirv-reflection = ["rendy/spirv-reflection"]
window = ["amethyst_window"]

[[bench]]
name = "camera"
harness = false
