[package]
name = "amethyst_rendy"
version = "0.16.0"
authors = ["Amethyst Foundation <contact@amethyst.rs>"]
edition = "2018"
description = "High-level rendering engine with multiple backends"
keywords = ["game", "engine", "renderer", "3d", "amethyst"]
categories = ["rendering", "rendering::engine"]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["shader-compiler", "test-support", "winit", "vulkan"]

[dependencies]
amethyst_assets = { path = "../amethyst_assets", version = "0.16.0" }
amethyst_core = { path = "../amethyst_core", version = "0.16.0" }
amethyst_error = { path = "../amethyst_error", version = "0.16.0" }
amethyst_window = { path = "../amethyst_window", version = "0.16.0", optional = true }
amethyst_config = { path = "../amethyst_config", version = "0.16.0" }
derive-new = "0.5"
genmesh = "0.6"
glsl-layout = "0.4"
gltf = { version = "0.16", features = ["KHR_lights_punctual"] }
lazy_static = "1.4"
log = "0.4"
palette = { version = "0.4", default-features = false, features = ["serde"] }
ron = "0.6.4"
serde = { version = "1", features = ["derive"] }
fnv = "1"
derivative = "2.2.0"
smallvec = "1.6.1"
static_assertions = "1.1"
indexmap = { version = "1.7", features = ["rayon"] }
type-uuid = "0.1"
thread_profiler = { version = "0.3", optional = true }
approx = "0.5"
legion-prefab = { version = "0.1", git = "https://github.com/amethyst/prefab", rev = "49ba008a3b398033725726c641b96cd48b5a1080" }

[target.'cfg(target_os = "macos")'.dependencies]
rendy = { version = "0.5", git = "https://github.com/amethyst/rendy", rev = "50667887612adc9314accea77438aa7fb925bce0", default-features = false, features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
rendy = { version = "0.5", git = "https://github.com/amethyst/rendy", rev = "50667887612adc9314accea77438aa7fb925bce0", default-features = false, features = ["vulkan"] }

[target.'cfg(target_os = "linux")'.dependencies]
rendy = { version = "0.5", git = "https://github.com/amethyst/rendy", rev = "50667887612adc9314accea77438aa7fb925bce0", default-features = false, features = ["vulkan"] }

[dev-dependencies]
amethyst = { path = "../", version = "0.16.0", features = ["renderer"] }
winit = { version = "0.25", features = ["serde"] }
rayon = "1.5"
more-asserts = "0.2.1"
criterion = "0.3.4"

[features]
default = [
    "rendy/base",
    "rendy/mesh-obj",
    "rendy/texture-image",
    "rendy/texture-palette",
    "rendy/serde-1",
]
metal = ["rendy/metal"]
vulkan = ["rendy/vulkan"]
empty = ["rendy/empty"]
profiler = ["thread_profiler/thread_profiler", "rendy/profiler"]
no-slow-safety-checks = ["rendy/no-slow-safety-checks"]
shader-compiler = ["rendy/shader-compiler"]
test-support = []
experimental-spirv-reflection = ["rendy/spirv-reflection"]
window = ["amethyst_window"]

[[bench]]
name = "camera"
harness = false
