[package]
name = "amethyst_state"
version = "0.1.0"
authors = ["Joël Lupien <jojolepromain@gmail.com>"]
readme = "README.md"
description = """
State and Transitions between States.
"""
exclude = ["examples/*"]
license = "MIT/Apache-2.0"
keywords = ["game", "localisation", "resource", "management", "amethyst"]
categories = ["filesystem,localisation"]

documentation = "https://www.amethyst.rs/doc/master/doc/amethyst/"
homepage = "https://www.amethyst.rs/"
repository = "https://github.com/amethyst/amethyst"

[badges]
appveyor = { repository = "amethyst/amethyst", branch = "master" }
travis-ci = { repository = "amethyst/amethyst" }

[dependencies]
amethyst_config = { path = "../amethyst_config", version = "0.7.0" }
amethyst_core = { path = "../amethyst_core", version = "0.3.0" }
amethyst_events = { path = "../amethyst_events", version = "0.1.0" }
amethyst_input = { path = "../amethyst_input", version = "0.4.0" }
amethyst_renderer = { path = "../amethyst_renderer", version = "0.8.0" }
amethyst_ui = { path = "../amethyst_ui", version = "0.3.0" }
derivative = "1.0"
thread_profiler = { version = "0.3", optional = true }

[features]
profiler = [ "thread_profiler/thread_profiler" ]
